  QOpenGLFunctions, etc.

* QOpenGLPaintDevice has been added to be able to use QPainter to render into
  the currently bound context.

* Behavioral change in QImage::fill() on an image with format Format_RGB888:
  For consistency with RGB32 and other 32-bit formats, function now expects
  image data in RGB layout as opposed to BGR layout.

QtWidgets
---------
* QInputContext removed as well as related getters and setters on QWidget and QApplication.
  Input contexts are now platform specific.

* QInputDialog::getInteger() has been obsoleted. Use QInputDialog::getInt() instead.

* In Qt 4, QStyle::standardIconImplementation() and layoutSpacingImplementation()
  were introduced instead of making the corresponding methods virtual due to binary
  compatibility reasons. QStyle::standardIcon() and layoutSpacing() have been made
  (pure) virtual in Qt 5.

* In Qt 4, many QStyleOption subclasses were introduced in order to keep
  binary compatibility -- QStyleOption was designed to be extended this way,
  in fact it embeds a version number. In Qt 5 the various QStyleOption*V{2,3,4}
  classes have been removed, and their members merged into the respective
  base classes. Those classes were left as typedefs to keep existing code
  working. Still, some minor adjustements could be necessary, especially in code
  that uses QStyleOption directly and does not initialize all the members using
  the proper Qt API: due to the version bump, QStyle will try to use the additional
  QStyleOption members, which are left default-initialized.

* QHeaderView - The following functions have been obsoleted.

  * void setMovable(bool movable) - use void setSectionsMovable(bool movable) instead.

  * bool isMovable() const - use bool sectionsMovable() const instead.

  * void setClickable(bool clickable) - use void setSectionsClickable(bool clickable) instead.

  * bool isClickable() const - use bool sectionsClickable() instead.

  * void setResizeMode(int logicalindex, ResizeMode mode) -